--- a/apiconsume/src/main/resources/application.properties
+++ b/apiconsume/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 server.port=8181
 #Sql sever connection
-spring.datasource.url= jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=APITESTINGDB
+spring.datasource.url= jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=RestTemplate
 spring.datasource.username= TESTING
 spring.datasource.password= Sql@12345
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServerDialect
-spring.jpa.hibernate.ddl-auto=none
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
